Changes that enhance gameplay.

--- a/waslap/bin/index.html
+++ b/waslap/bin/index.html
@@ -14,7 +14,7 @@
 			scale: "noScale",
 			allowFullscreen: "true",
 			allowScriptAccess: "always",
-			bgcolor: "",
+			bgcolor: "#000000",
 			wmode: "direct" // can cause issues with FP settings & webcam
 		};
 		var attributes = {
@@ -31,7 +31,7 @@
 		body { margin:0; }
 	</style>
 </head>
-<body>
+<body bgcolor="#000000">
 	<div id="altContent">
 		<h1>waslap</h1>
 		<p><a href="http://www.adobe.com/go/getflashplayer">Get Adobe Flash player</a></p>
